2018-07-23  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/databind/JSONBean.java,
	src/main/java/ball/databind/JSONBeanTypeMap.java:
	Record the ObjectCodec (ObjectMapper) that was used to deserialize
	the JSONBean.  Added nodeAt(String) and textAt(String).

2018-03-03  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/databind/JSONBean.java:
	Implement Serializable.

2017-10-18  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/PolymorphicTypeMap.java:
	Infer containing package if not specified.

2017-10-17  Allen D. Ball  <ball@sol>

	* Replaced JSONBeanSerializer with JSONBeanSerializerModifier.
	Moved JSONBean BeanDeserializerModifier implementation to
	PolymorphicTypeMap.

2017-09-16  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/JSONBeanSerializer.java:
	Initial writing.

	* src/main/java/ball/databind/JSONBeanDeserializer.java:
	Added generic parameter.

2017-09-15  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/PolymorphicTypeMap.java:
	Initial writing.

2017-09-13  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/AbstractObjectMapperConfiguration.java:
	Initial writing.

	* src/main/java/ball/databind/ObjectMapperFeature.java:
	Use EnumLookupMap.

2017-09-09  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/ant/taskdefs/ObjectMapperTask.java:
	Added registerModules attribute (default: false).
	Support ObjectMapper features configured as Project properties.

	* src/main/java/ball/databind/ObjectMapperFeature.java:
	Initial writing.

	* Use ModuleImpl instead of annotations to register
	JSONBean.Serializer.

2017-09-04  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/ModuleImpl.java:
	Initial writing (provided as template).

2017-08-26  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/JSONBean.java,
	src/main/java/ball/databind/JSONBeanDeserializer.java:
	Initial writing.

2017-08-09  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/ant/taskdefs/ObjectMapperTask.java: