@@ -1,3 +1,9 @@
+2018-07-26  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/ball/databind/UNIXTimeStampDeserializer.java,
+	src/main/java/ball/databind/UNIXTimeStampSerializer.java:
+	Initial writing.
+
 2018-07-23  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/ball/databind/JSONBean.java,
